# IDM-UML-Platform

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  storage.py
backend/app/core/: config.py
backend/app/data/: 0dd801fe-cada-44d2-880b-afc829856cc5.json  4ba11dbe-5c93-47da-9097-d2e7531cafa1.json  97cdc41e-658f-4fb3-a123-d4794450eef4.json  a163121f-58c2-4dc6-b11c-a8c907619128.json  c76e5145-1c19-494b-877c-cbd34f45d3c9.json  ca98cb4c-3bee-49fa-861e-222e4eb332ad.json  da250523-caf3-4258-b5fe-7e5de715f33f.json
backend/app/models/: uml.py
backend/app/routes/: __init__.py  generate.py  models.py
backend/app/schemas/: uml.py
backend/app/services/: generation.py
backend/app/utils/: zip.py
docs/: README.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.tsx  index.css
frontend/src/components/: UmlEditor.tsx
frontend/src/services/: api.ts
frontend/src/types/: uml.ts
mde/acceleo/java/: JavaClass.mtl
mde/acceleo/python/: PythonClass.mtl
mde/examples/: sample-model.json  sample-model.xmi
mde/metamodel/: uml.ecore
mde/sirius/: uml.odesign
