[project]
name = "idm_uml_backend"
version = "0.1.0"
description = "Backend FastAPI pour la plateforme IDM UML"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.113.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.8.0",
  "jinja2>=3.1.0"
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"
